[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/background/Blocos/Bloco -  Energia Cabo/Cabo - Energia solto.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Blocos/cabo-Energia.gd" type="Script" id=2]
[ext_resource path="res://Assets/background/Blocos/Bloco -  Energia Cabo/Cabo - Energia Ligado - Direita.png" type="Texture" id=3]
[ext_resource path="res://Assets/background/Blocos/Bloco -  Energia Cabo/Cabo - Energia Ligado - Esquerda.png" type="Texture" id=4]
[ext_resource path="res://Assets/background/Blocos/Bloco -  Energia Cabo/Cabo - Energia Ligado - Esquerda - Direita.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 48 )

[sub_resource type="Animation" id=2]
resource_name = "Desconectado"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Cabo-EnergiaSolto:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cabo-EnergiaSolto:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cabo-EnergiaSolto:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Direita"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Cabo-EnergiaSolto:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cabo-EnergiaSolto:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cabo-EnergiaSolto:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Esquerda"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Cabo-EnergiaSolto:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cabo-EnergiaSolto:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cabo-EnergiaSolto:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Esquerda-Direita"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Cabo-EnergiaSolto:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cabo-EnergiaSolto:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cabo-EnergiaSolto:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 52.5, 53 )

[node name="Bloco - Energia - Cabo" type="KinematicBody2D"]
position = Vector2( 1, -1 )
collision_layer = 1024
collision_mask = 17408
script = ExtResource( 2 )

[node name="Cabo-EnergiaSolto" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "Desconectado"
anims/Desconectado = SubResource( 2 )
anims/Direita = SubResource( 3 )
anims/Esquerda = SubResource( 4 )
anims/Esquerda-Direita = SubResource( 5 )

[node name="Direita" type="RayCast2D" parent="."]
position = Vector2( 48, 1 )
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 17408

[node name="Esquerda" type="RayCast2D" parent="."]
position = Vector2( -49, 1 )
enabled = true
cast_to = Vector2( -5, 0 )
collision_mask = 17408

[node name="Detectar_Massivo_ativo_direita" type="RayCast2D" parent="."]
position = Vector2( 48, 15 )
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 2048

[node name="Detectar_Massivo_ativo_esquerda" type="RayCast2D" parent="."]
position = Vector2( -48, 16 )
enabled = true
cast_to = Vector2( -5, 0 )
collision_mask = 2048

[node name="Cabo_Energizado" type="KinematicBody2D" parent="."]
collision_layer = 4096
collision_mask = 4096

[node name="Cabo_Energizado" type="CollisionShape2D" parent="Cabo_Energizado"]
position = Vector2( -0.5, 0 )
shape = SubResource( 6 )
disabled = true

[node name="Detectar_Cabo_Energizado_Direita" type="RayCast2D" parent="."]
position = Vector2( 53, -12 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 4096

[node name="Detectar_Cabo_Energizado_Esquerda" type="RayCast2D" parent="."]
position = Vector2( -54, -13 )
enabled = true
cast_to = Vector2( -1, 0 )
collision_mask = 4096
